# TrackFit-Pro

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/api/: dependencies.py
src/api/v1/: goals.py  users.py  workouts.py
src/core/: cache.py  config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
src/models/: models.py
src/schemas/: goal.py  user.py  workout.py
src/services/: analytics.py  goal_service.py  user_service.py  workout_service.py
tests/: conftest.py  test_homework.py
